fix text wrapping

--- a/new-tab/css/style.css
+++ b/new-tab/css/style.css
@@ -55,7 +55,7 @@ body {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 500px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 25px;
